# koshi

./: .gitignore  CMakeLists.txt  TODO  install.sh  plugInfo.json
Src/: Main.cpp
Src/Export/: DebugObj.h  OIIOViewer.h  SFMLViewer.h
Src/Import/: MeshFile.h  SceneFile.h
Src/Integrators/: Integrator.h  PathIntegrator.cpp  PathIntegrator.h
Src/Lights/: EnvironmentLight.cpp  EnvironmentLight.h  Light.h  LightArea.cpp  LightArea.h  LightCombiner.h  LightEnvironment.cpp  LightEnvironment.h  LightRectangle.cpp  LightRectangle.h  LightSample.h  LightSphere.cpp  LightSphere.h  RectangleLight.cpp  RectangleLight.h
Src/Materials/: Dielectric.cpp  Dielectric.h  Fresnel.h  GGX.cpp  GGX.h  GGXReflect.cpp  GGXReflect.h  GGXRefract.cpp  GGXRefract.h  Lambert.cpp  Lambert.h  Material.h  MaterialBackLambert.cpp  MaterialBackLambert.h  MaterialDielectric.cpp  MaterialDielectric.h  MaterialGGXReflect.cpp  MaterialGGXReflect.h  MaterialGGXRefract.cpp  MaterialGGXRefract.h  MaterialLambert.cpp  MaterialLambert.h  MaterialSubsurface.cpp  MaterialSubsurface.h  MaterialVolume.cpp  MaterialVolume.h
Src/Math/: Box3f.h  Helpers.h  RNG.cpp  RNG.h  Transform3f.h  Types.h  Vec2.h  Vec3f.h
Src/Objects/: EmbreeMesh.cpp  EmbreeSphere.cpp  EmbreeTriangle.cpp  Mesh.cpp  Mesh.h  Object.h  ObjectBox.cpp  ObjectBox.h  ObjectMesh.cpp  ObjectMesh.h  ObjectSphere.cpp  ObjectSphere.h  ObjectTriangle.cpp  ObjectTriangle.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
Src/Render/: Render.cpp  Render.h
Src/Scene/: Accelerator.cpp  Accelerator.h  Camera.cpp  Camera.h  Embree.cpp  Embree.h  Scene.cpp  Scene.h
Src/Textures/: Checker.h  Gradient.h  Image.cpp  Image.h  OpenVDB.h  Texture.h
Src/Util/: Attribute.h  Color.h  Intersect.h  IorStack.h  Memory.h  Ray.h  Resources.h  Surface.h
Src/Volume/: MultiScatVolumeIntegrator.cpp  MultiScatVolumeIntegrator.h  Volume.cpp  Volume.h  VolumeIntegrator.cpp  VolumeIntegrator.h  VolumeStack.cpp  VolumeStack.h  ZeroScatVolumeIntegrator.h
dependencies/: robin_hood.h
hdKoshi/: domeLight.cpp  domeLight.h  mesh.cpp  mesh.h  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  rendererPlugin.cpp  rendererPlugin.h
koshi/: Aov.cc  Aov.h  Camera.h  Constants.h  Format.h  Geometry.h  GeometryMesh.cc  GeometryMesh.h  Intersect.h  IntersectList.h  Intersector.h  IntersectorOptix.cc  IntersectorOptix.h  Koshi.h  Node.h  OptixHelpers.h  Ray.h  RenderOptix.cc  RenderOptix.h  Sample.h  Scene.h  String.h  Texture.h  Transform.h  Vec2.h  Vec3.h  Vec4.h  optix_functions.cu  optix_test.cu
koshi-cmd/: GeometrySceneFile.h  IntegratorSceneFile.h  LightSceneFile.h  Main.cc  MaterialSceneFile.h  SFMLViewer.h  SceneFile.cc  SceneFile.h  TextureSceneFile.h
koshi/base/: Array.h  Memory.h  Object.h  ObjectGroup.h  Scene.cc  Settings.h
koshi/camera/: Camera.cc  Camera.h  PixelSampler.h
koshi/embree/: Embree.cc  EmbreeGeometry.h  EmbreeGeometryArea.h  EmbreeGeometryBox.h  EmbreeGeometrySphere.h  EmbreeGeometryVolume.h  EmbreeIntersector.cc  EmbreeIntersector.h
koshi/geometry/: Geometry.h  GeometryArea.cc  GeometryDirectional.h  GeometryEnvironment.h  GeometryMesh.cc  GeometryMesh.h  GeometrySphere.cc  GeometryVolume.cc  GeometryVolume.h  MeshFile.h  Volume.h
koshi/integrator/: AbsorbtionMedium.h  Integrator.cc  Integrator.h  LightEvaluator.h  SurfaceRandomWalkSampler.h  SurfaceSampler.cc  SurfaceSampler.h  Transmittance.h  VolumeSingleScatter.cc  VolumeSingleScatter.h
koshi/intersection/: Interiors.h  Intersect.h  IntersectCallbacks.h  Intersector.h
koshi/light/: LightSampler.h  LightSamplerArea.cc  LightSamplerArea.h  LightSamplerDirectional.h  LightSamplerEnvironment.cc  LightSamplerSphere.cc
koshi/material/: BackLambert.h  Lambert.h  Lobe.h  LobeArray.h  Material.h  MaterialDielectric.cc  MaterialGGXReflect.cc  MaterialGGXReflect.h  MaterialGGXRefract.cc  MaterialGGXRefract.h  MaterialHenyeyGreenstein.cc  MaterialHenyeyGreenstein.h  MaterialLambert.cc  MaterialLambert.h  MaterialRandomWalk.cc  MaterialRandomWalk.h  MaterialVolume.cc  MaterialVolume.h
koshi/math/: Box3f.h  Color.h  Helpers.h  Types.h  Vec2.h  Vec3.h  Vec3f.h  Vec4.h
koshi/random/: BlueNoiseGenerator.cc  ProgressiveNoiseGenerator.cc  ProgressiveNoiseGenerator.h  Random.h
koshi/render/: Buffer.h  Render.h
koshi/texture/: Texture.h  TextureChecker.h  TextureConstant.h  TextureGeometryAttribute.h  TextureGrid.h  TextureMultiply.h  TextureOpenVDB.h
plugin/ptx/: optix_test.ptx
src/: Main.cc  Main.cpp
src/Export/: DebugObj.h  OIIOViewer.h  SFMLViewer.h
src/Import/: MeshFile.h  SceneFile.h
src/Integrators/: Integrator.h  PathIntegrator.cpp  PathIntegrator.h
src/Lights/: Light.h  LightArea.cpp  LightArea.h  LightCombiner.h  LightEnvironment.cpp  LightEnvironment.h  LightSphere.cpp  LightSphere.h
src/Materials/: Material.h  MaterialBackLambert.cpp  MaterialBackLambert.h  MaterialDielectric.cpp  MaterialDielectric.h  MaterialGGXReflect.cpp  MaterialGGXReflect.h  MaterialGGXRefract.cpp  MaterialGGXRefract.h  MaterialHelpers.h  MaterialLambert.cpp  MaterialLambert.h  MaterialSubsurface.cpp  MaterialSubsurface.h
src/Math/: BlueNoiseGenerator.h  Box3f.h  Helpers.h  RNG.cpp  RNG.h  Random.cpp  Random.h  Transform3f.h  Types.h  Vec2.h  Vec3f.h
src/Objects/: ObjectBox.h  ObjectMesh.h  ObjectSphere.cpp  ObjectSphere.h
src/Render/: Render.cc  Render.cpp  Render.h
src/Scene/: Camera.cpp  Camera.h  Embree.cpp  Embree.h  Scene.cpp  Scene.h  Settings.h
src/Textures/: Checker.h  Gradient.h  Image.h  Texture.h  TextureChecker.h  TextureGradient.h  TextureImage.h  (+1 more)
(+266 files in other folders)
